Removed Javadoc references to external classes, as the were causing import failure

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ sourceCompatibility = '1.8'
 kaytee {
     baseVersion = "0.9.0.0"
     generateChangeLog=false
+
+    unitTest{
+        enabled = false
+    }
 }
 
 bintray {
